Add download button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         id="reset"
         value="Reset"
       />
+
+      <input
+        type="button"
+        name="download"
+        id="download"
+        value="Download"
+      />
     </form>
 
     <script
